--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,13 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    kapt 'android.arch.lifecycle:compiler:1.1.1'
+    //implementation 'android.arch.persistence.room:runtime:1.1.1'
+    //kapt 'android.arch.persistence.room:compiler:1.1.1'
+    //implementation 'android.arch.paging:runtime:1.0.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
